--- a/MoneySac/res/values/strings.xml
+++ b/MoneySac/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">MADPractice</string>
+    <string name="app_name">MoneySac</string>
     <string name="action_settings">Einstellungen</string>
     <string name="ok_button">OK</string>
     <string name="cancel_button">Abbrechen</string>
