--- a/MoneySac/res/values/strings.xml
+++ b/MoneySac/res/values/strings.xml
@@ -52,5 +52,15 @@
     <string name="menu_recurring_expense">Wiederk. Ausgabe</string>
     <string name="new_income">Neue Einnahme</string>
     <string name="new_expense">Neue Ausgabe</string>
+    <string name="weekly">wöchentlich</string>
+    <string name="monthly">monatlich</string>
+    <string name="two_weekly">alle zwei Wochen</string>
+    <string name="two_monthly">alle zwei Monate</string>
+    <string-array name="recurring_intervals">
+        <item name="interval_weekly">@string/weekly</item>
+        <item name="interval_monthly">@string/monthly</item>
+        <item name="interval_two_weekly">@string/two_weekly</item>
+        <item name="interval_two_monthly">@string/weekly</item>
+    </string-array>
 
 </resources>
