--- a/MoneySac/res/values/strings.xml
+++ b/MoneySac/res/values/strings.xml
@@ -54,25 +54,30 @@
     <string name="monthly">monatlich</string>
     <string name="two_weekly">alle zwei Wochen</string>
     <string name="two_monthly">alle zwei Monate</string>
+
     <string-array name="recurring_intervals">
         <item name="interval_weekly">@string/weekly</item>
         <item name="interval_monthly">@string/monthly</item>
         <item name="interval_two_weekly">@string/two_weekly</item>
         <item name="interval_two_monthly">@string/weekly</item>
     </string-array>
-        <string name="moneysac_title">MoneySac</string>
-        <string name="choose_month">Monat wählen</string>
-        <string name="what">"Was? "</string>
-        <string name="amount">"Betrag: "</string>
-        <string name="euro">€</string>
-        <string name="category_text">"Kategorie: "</string>
-        <string name="dateText">"Datum: "</string>
-        <string name="add_photo">Foto der Rechnung anhängen</string>
-        <string name="category_used">Kategorie wird noch in Einträgen verwendet</string>
-        <string name="end_date_text">"Enddatum: "</string>
-        <string name="start_date_text">"Startdatum: "</string>
-        <string name="desc_is_required">Beschreibung darf nicht leer sein!</string>
-        <string name="amount_is_required">Betrag darf nicht leer sein!</string>
-        <string name="no_valid_category_selected">Es existiert keine Kategorie des passenden Types!</string>
+
+    <string name="moneysac_title">MoneySac</string>
+    <string name="choose_month">Monat wählen</string>
+    <string name="what">"Was? "</string>
+    <string name="amount">"Betrag: "</string>
+    <string name="euro">€</string>
+    <string name="category_text">"Kategorie: "</string>
+    <string name="dateText">"Datum: "</string>
+    <string name="add_photo">Foto der Rechnung anhängen</string>
+    <string name="category_used">Kategorie wird noch in Einträgen verwendet</string>
+    <string name="end_date_text">"Enddatum: "</string>
+    <string name="start_date_text">"Startdatum: "</string>
+    <string name="desc_is_required">Beschreibung darf nicht leer sein!</string>
+    <string name="amount_is_required">Betrag darf nicht leer sein!</string>
+    <string name="no_valid_category_selected">Es existiert keine Kategorie des passenden Types!</string>
+    <string name="title_activity_authenticator">AuthenticatorActivity</string>
+    <string name="pin">PIN</string>
+    <string name="athenticator_wrong_pw">Falsches Passwort!</string>
 
 </resources>
