Unterstützung für andere Sprachen (erstmal nur Englisch)

--- a/MoneySac/res/values-en/strings.xml
+++ b/MoneySac/res/values-en/strings.xml
@@ -2,41 +2,41 @@
 <resources>
 
     <string name="app_name">MoneySac</string>
-    <string name="action_settings">Einstellungen</string>
+    <string name="action_settings">Settings</string>
     <string name="ok_button">OK</string>
-    <string name="cancel_button">Abbrechen</string>
-    <string name="listRowTitle">Titel</string>
-    <string name="detailLabelDescription">Beschreibung</string>
-    <string name="detailLabelTitle">Titel</string>
-    <string name="preferenceTextSize">Schriftgröße</string>
-    <string name="defaultPriority">hoch</string>
-    <string name="defaultPriorityTitle">Vorausgewählte Priorität</string>
-    <string name="deleteButtonText">Löschen</string>
-    <string name="saveButtonText">Speichern</string>
+    <string name="cancel_button">Cancel</string>
+    <string name="listRowTitle">Title</string>
+    <string name="detailLabelDescription">Description</string>
+    <string name="detailLabelTitle">Title</string>
+    <string name="preferenceTextSize">Fontsize</string>
+    <string name="defaultPriority">high</string>
+    <string name="defaultPriorityTitle">Default priority</string>
+    <string name="deleteButtonText">Delete</string>
+    <string name="saveButtonText">Save</string>
     <string name="title_activity_download">DownloadActivity</string>
-    <string name="strEinnahmenHead">Einnahmen:</string>
-    <string name="strAusgabenHead">Ausgaben:</string>
-    <string name="strEinnahmen">Einnahmen</string>
-    <string name="strAusgaben">Ausgaben</string>
-    <string name="strBeides">Beides</string>
+    <string name="strEinnahmenHead">Takings:</string>
+    <string name="strAusgabenHead">Expenses:</string>
+    <string name="strEinnahmen">Takings</string>
+    <string name="strAusgaben">Expenses</string>
+    <string name="strBeides">Both</string>
     <string name="strAddIncome">+</string>
     <string name="strAddExpense">-</string>
     <string name="strAddMonth">+</string>
     <string name="name">Name</string>
     <string name="title_activity_edit_entry">EditEntryActivity</string>
-    <string name="moneysac_menu_category">Kategorien</string>
-    <string name="title_activity_category_list_view">Kategorien</string>
+    <string name="moneysac_menu_category">Categories</string>
+    <string name="title_activity_category_list_view">Categories</string>
     <string name="title_activity_category_detail">CategoryDetailActivity</string>
-    <string name="category_details_name_empty">Name darf nicht leer sein</string>
-    <string name="saved_succesfull">Erfolgreich gespeichert!</string>
-    <string name="delete">Löschen</string>
-    <string name="deleted_category">Kategorie gelöscht</string>
-    <string name="edit">Bearbeiten</string>
+    <string name="category_details_name_empty">Name must not be empty</string>
+    <string name="saved_succesfull">Save successful!</string>
+    <string name="delete">Delete</string>
+    <string name="deleted_category">Categorie deleted</string>
+    <string name="edit">Edit</string>
     <string name="title_activity_show_picture">ShowPictureActivity</string>
-    <string name="menu_import">Importieren</string>
-    <string name="menu_export">Exportieren</string>
-    <string name="menu_additional">Weiteres</string>
-    <string name="main_pls_select">Bitte wählen</string>
+    <string name="menu_import">Import</string>
+    <string name="menu_export">Export</string>
+    <string name="menu_additional">Further</string>
+    <string name="main_pls_select">Please select</string>
     <string name="no_file_found_to_import">Keine Datei zum importieren gefunden.</string>
     <string name="database_exported">Datenbank wurde erfolgreich exportiert.\n\n</string>
     <string name="select_import_file">Datum auswählen</string>
