Englische Übersetzung fertig

--- a/MoneySac/res/values-en/strings.xml
+++ b/MoneySac/res/values-en/strings.xml
@@ -37,30 +37,30 @@
     <string name="menu_export">Export</string>
     <string name="menu_additional">Further</string>
     <string name="main_pls_select">Please select</string>
-    <string name="no_file_found_to_import">Keine Datei zum importieren gefunden.</string>
-    <string name="database_exported">Datenbank wurde erfolgreich exportiert.\n\n</string>
-    <string name="select_import_file">Datum auswählen</string>
-    <string name="database_imported">Datenbank wurde erfolgreich importiert.</string>
-    <string name="strContinue">Fortfahren</string>
-    <string name="cancel">Abbrechen</string>
-    <string name="attention">Achtung</string>
-    <string name="menu_stats">Statistik</string>
-    <string name="menu_settings">Einstellungen</string>
-    <string name="title_activity_stats">Statistik</string>
+    <string name="no_file_found_to_import">No file for import found.</string>
+    <string name="database_exported">Database export successful</string>
+    <string name="select_import_file">Chose date</string>
+    <string name="database_imported">Database import successful</string>
+    <string name="strContinue">Continue</string>
+    <string name="cancel">Abort</string>
+    <string name="attention">Attention</string>
+    <string name="menu_stats">Statistics</string>
+    <string name="menu_settings">Settings</string>
+    <string name="title_activity_stats">Statistics</string>
     <string name="title_activity_recurring_entry">RecurringEntryActivity</string>
-    <string name="menu_recurring_income">Wiederk. Einkommen</string>
-    <string name="menu_recurring_expense">Wiederk. Ausgabe</string>
-    <string name="weekly">wöchentlich</string>
-    <string name="monthly">monatlich</string>
-    <string name="two_weekly">alle zwei Wochen</string>
-    <string name="two_monthly">alle zwei Monate</string>
-    <string name="title_activity_settings">Einstellungen</string>
-    <string name="settings_security">Sicherheit</string>
-    <string name="settings_safe_login">Sicherer Login</string>
-    <string name="settings_safe_login_summary">PIN für Login benötigt</string>
-    <string name="settings_other">Weitere Einstellungen</string>
+    <string name="menu_recurring_income">Recurring Income</string>
+    <string name="menu_recurring_expense">Recurring expense</string>
+    <string name="weekly">weekly</string>
+    <string name="monthly">monthly</string>
+    <string name="two_weekly">every two weeks</string>
+    <string name="two_monthly">every two month</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="settings_security">Security</string>
+    <string name="settings_safe_login">Safe login</string>
+    <string name="settings_safe_login_summary">PIN for login required</string>
+    <string name="settings_other">Further settings</string>
     <string name="settings_pin">PIN</string>
-    <string name="settings_pin_summary">Die PIN für den sicheren Login ändern</string>
+    <string name="settings_pin_summary">Change PIN for secure login</string>
 
     <string-array name="recurring_intervals">
         <item name="interval_weekly">@string/weekly</item>
@@ -70,23 +70,23 @@
     </string-array>
 
     <string name="moneysac_title">MoneySac</string>
-    <string name="choose_month">Monat wählen</string>
-    <string name="what">"Was? "</string>
-    <string name="amount">"Betrag: "</string>
+    <string name="choose_month">Chose month</string>
+    <string name="what">"What? "</string>
+    <string name="amount">"Amount: "</string>
     <string name="euro">€</string>
-    <string name="category_text">"Kategorie: "</string>
-    <string name="dateText">"Datum: "</string>
-    <string name="add_photo">Foto der Rechnung anhängen</string>
-    <string name="category_used">Kategorie wird noch in Einträgen verwendet</string>
-    <string name="end_date_text">"Enddatum: "</string>
-    <string name="start_date_text">"Startdatum: "</string>
-    <string name="desc_is_required">Beschreibung darf nicht leer sein!</string>
-    <string name="amount_is_required">Betrag darf nicht leer sein!</string>
-    <string name="no_valid_category_selected">Es existiert keine Kategorie des passenden Types!</string>
+    <string name="category_text">"Category: "</string>
+    <string name="dateText">"Date: "</string>
+    <string name="add_photo">Attach picture of bill</string>
+    <string name="category_used">Category is still in use</string>
+    <string name="end_date_text">"Enddate: "</string>
+    <string name="start_date_text">"Startdate: "</string>
+    <string name="desc_is_required">Description must not be empty!</string>
+    <string name="amount_is_required">Amount must not be empty!</string>
+    <string name="no_valid_category_selected">There is no category of this type!</string>
     <string name="title_activity_authenticator">AuthenticatorActivity</string>
     <string name="pin">PIN</string>
-    <string name="athenticator_wrong_pin">Falsche PIN!</string>
-    <string name="athenticator_std_pin">Die Standard-PIN ist leer </string>
-    <string name="settings_pin_setup">Bitte PIN einrichten</string>
+    <string name="athenticator_wrong_pin">Wrong PIN!</string>
+    <string name="athenticator_std_pin">Standard-PIN is empty</string>
+    <string name="settings_pin_setup">Please set up a PIN</string>
 
 </resources>
